--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,11 @@ TODO:
 
 
 Homepage
-- Section with how to join (like here: https://www.gtsailing.org/join/)
-- Section on Learn To Sail (include link for sign-up form)
-- Follow us on instagram
-- Instagram feed
+- intro: Section with info about what we do
+  -> like current portfolio page
+- join: Section with how to join (like here: https://www.gtsailing.org/join/)
+  -> Just like the current services page
+- teaching: Section on Learn To Sail (include link for sign-up form)
+  -> left side: one photo; right side: text
+- insta: Instagram feed
+- logo: bottom
